# ebl-api

./: .codeclimate.yml  .coveragerc  .env  .env.example  .flake8  .git-blame-ignore-revs  .gitattributes  .gitignore  .gitpod.Dockerfile  .gitpod.yml  .markdownlintignore  .pre-commit-config.yaml  .pyre_configuration  .travis.yml  0align.py  AUTH_FIX_HANDOFF.md  AUTH_FIX_INVESTIGATION_LOG.md  BACKEND_IMPLEMENTATION_LOG.md  BACKEND_TODOS.md  CRLF_FIX_CHANGES.md  CRLF_FIX_TODO.md  CRLF_TEAM_INSTRUCTIONS.md  Dockerfile  LICENSE  M2M_Auth0_instructions.md  M2M_Auth0_manual.md  PIHANS131.json  PR_REVIEW_GUIDE.md  Pipfile  Procfile  README.md  TASK-001-BUG-3-api-instructions.md  TASK-001-log.md  TASK-001-todo.md  TASK-1-log.md  TASK-1-realia_trello_card.json  TASK-1-review.md  TASK-1-todo.md  TASK-2-log.md  TASK-2-review.md  (+131 more)
.claude/: settings.json  settings.local.json
.claude/hooks/: block-master-push.sh
.devcontainer/: README.md  devcontainer.json  init.sh  inject-secrets.py  setup.sh  sync-env.py  test_sync_env.py
.github/instructions/: copilot.instructions.md
.github/workflows/: black.yml  codeql.yml  main.yml  secret-scan.yml
.theia/: settings.json
dictionary/: app.py  dictionary.py  word_search.py  words.py
docs/: ebl-atf.md  media-architecture.md  media-importer-backfill-security.md
docs/openapi/: ebl-partner-bibliography.v1.yaml
ebl/: .ebl_ai_client.py.swp  00align.py  align.py  alignf.py  alignf2.py  alignm.py  alignm2.py  app.py  atf.py  auth0.py  cache.py  changelog.py  context.py  cors_component.py  count_signs.py  debug.py  dispatcher.py  ebl_ai_client.py  ebl_scoring.py  error_handler.py  errors.py  files.py  marshmallowschema.py  merger.py  migrate_annotations.py  mongo_collection.py  mongo_repository.py  performance_test.py  require_scope.py  schemas.py  update_text.py
ebl/a0lignment/: 0align.py  0align_all.py  align_within_manuscript.py  sequence.py  utils.py  vocabulary.py
ebl/aalignment/: align_fragmentarium.py
ebl/alignment/: align_fragmentarium.py  data_export.py
ebl/atf/: clean_atf.py  word_cleaner.py
ebl/atf_importer/: .gitignore
ebl/bibliography/: bibliography.py  bibliography_entries.py  bibliography_entry.py  reference.py
ebl/chronology/: brinkmanKings.json  chronology.py
ebl/common/: folios.py  migrate_provenances.py  period.py  siglum_enum.py
ebl/corpus/: alignment.py  alignment_updater.py  alignments.py  api_serializer.py  chapter_updater.py  corpus.py  label_validator.py  lines.py  lines_updater.py  manuscripts.py  manuscripts_updater.py  mongo_serializer.py  mongo_text_repository.py  text.py  text_hydrator.py  text_serializer.py  text_utils.py  text_validator.py  texts.py  update_texts.py
ebl/dictionary/: dictionary.py  migrate_named_entity_tags.py  word.py  word_search.py  words.py
ebl/files/: file_repository.py  files.py
ebl/fragment/: folios.py  fragment.py  fragment_factory.py  fragment_info.py  record.py  value.py  (+6 more)
glossary/: akk-x-stdbab.glo
import/: P512862.atf  P512863.atf  P512864.atf  P512865.atf  P512866.atf  P512867.atf  P512868.atf  P512871.atf  P512872.atf  P512873.atf  P512874.atf  P512876.atf  P512877.atf  P525122.atf  P525123.atf  P525124.atf  P525125.atf  P525126.atf  P525127.atf  P525128.atf  P525129.atf  P525130.atf  P525131.atf  P525132.atf  P525133.atf  P525134.atf  P525135.atf  P525136.atf  P525137.atf  P525138.atf  P525139.atf  P525140.atf  P525141.atf  P525142.atf  P525143.atf  P525144.atf  P525145.atf  P525146.atf  P525147.atf  P525148.atf  (+16 more)
mongosync/: Dockerfile  crontab  docker-compose.yml  mongosync.sh
scripts/: __init__.py  bibliography_duplicate_audit.py  ggshield-scan-pre-commit.sh  seed_realia.py  test-secret-scanning.sh
tests/: conftest.py  dictionary.json  test_app.py  test_dictionary.py  test_fragmentarium.py  test_fragments_route.py
(+2296 files in other folders)
