[tool.poetry]
name = "ebl-api"
version = "0.1.0"
description = ""
authors = []

[tool.poetry.dependencies]
python = "3.9.*"
falcon = "^3.0.1"
falcon-auth = "*"
pymongo = "*"
pydash = "*"
requests = "*"
dictdiffer = "*"
jsonschema = "*"
attrs = "*"
sentry-sdk = {extras = ["falcon"],version = "*"}
roman = "*"
waitress = "*"
lark-parser = "0.11.2"
marshmallow = "*"
inflect = "*"
tqdm = "*"
marshmallow-oneofschema = "*"
pycryptodomex = "*"
cryptography = "^36.0.1"
pillow = "*"
alignment = {git = "https://github.com/ElectronicBabylonianLiterature/python-alignment.git"}
falcon-caching = "^1.0.1"
redis = "^4.1.3"
althaia = "^3.14.1-alpha.2"

[tool.poetry.dev-dependencies]
pytest = "^7.2.0"
pytest-cov = "^4.0.0"
freezegun = "*"
pytest-mockito = "^0.0.4"
factory-boy = "*"
flake8 = "*"
pyhamcrest = "*"
flake8-bugbear = "*"
httpretty = "*"
pyre-check = "0.9.10"
black = "*"
pymongo-inmemory = "*"
pytest-xdist = "^3.0.2"
autopep8 = "^1.6.0"
pytest-forked = "^1.4.0"
mypy-extensions = "^0.4.3"
typeguard = "^2.13.3"
typing-extensions = "^4.4.0"
typing-inspect = "^0.8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
