[tool.poetry]
name = "ebl-api"
version = "0.1.0"
description = ""
authors = []

[tool.poetry.dependencies]
python = "^3.9.0"
falcon = "^3.0.1"
falcon-auth = "*"
pymongo = "*"
pydash = "*"
requests = "*"
dictdiffer = "*"
jsonschema = "*"
attrs = "*"
sentry-sdk = {extras = ["falcon"],version = "*"}
roman = "*"
waitress = "*"
lark-parser = "0.11.2"
marshmallow = "*"
inflect = "*"
tqdm = "*"
marshmallow-oneofschema = "*"
pycryptodomex = "*"
cryptography = "*"
pillow = "*"
alignment = {git = "https://github.com/ElectronicBabylonianLiterature/python-alignment.git"}
falcon-caching = "^1.0.1"
redis = "^4.5.3"
althaia = "^3.14.1-alpha.2"
cairosvg = "^2.7.0"
pyyaml = "6.0.1"
python-dateutil = "^2.8.2"


[tool.poetry.dev-dependencies]
pytest = "*"
pytest-cov = "*"
freezegun = "*"
pytest-mockito = "*"
factory-boy = "*"
flake8 = "*"
pyhamcrest = "*"
flake8-bugbear = "*"
httpretty = "*"
pyre-check = "0.9.10"
black = "*"
pymongo-inmemory = "*"
pytest-xdist = "*"
autopep8 = "^1.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
