[tool.poetry]
name = "ebl-api"
version = "0.1.0"
description = ""
authors = []

[tool.poetry.dependencies]
python = ">=3.9.2,<4.0"
falcon = "^3.0.1"
falcon-auth = "*"
pymongo = "*"
pydash = "*"
requests = "*"
urllib3 = "^2.5.3"
dictdiffer = "*"
jsonschema = "*"
pydantic = "^1.10.19"
attrs = "*"
sentry-sdk = {extras = ["falcon"],version = "*"}
roman = "*"
waitress = "*"
lark-parser = "0.11.2"
marshmallow = "^3.23.2"
inflect = "*"
tqdm = "*"
marshmallow-oneofschema = "*"
pycryptodomex = "*"
cryptography = ">=44.0.0"
pillow = "*"
alignment = {git = "https://github.com/ElectronicBabylonianLiterature/python-alignment.git"}
falcon-caching = "^1.0.1"
redis = "^4.5.3"
althaia = "^3.14.1-alpha.2"
cairosvg = "^2.7.0"
pyyaml = "6.0.1"
python-dateutil = "^2.8.2"
natsort = "^8.4.0"
ruff = "^0.5.5"
attr = "^0.3.2"


[tool.poetry.group.dev]
optional = true
[tool.poetry.group.dev.dependencies]
pytest = "*"
pytest-cov = "*"
freezegun = "*"
pytest-mockito = "*"
factory-boy = "*"
flake8 = "*"
pyhamcrest = "*"
flake8-bugbear = "*"
httpretty = "*"
pyre-check = "0.9.10"
black = "*"
pymongo-inmemory = "*"
pytest-xdist = "*"
autopep8 = "^1.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff.lint]
select = ["C", "E", "F", "W", "B"]
ignore = ["E203", "E501", "E231", "B028", "B904", "C901"]
